trunk/Archive2/ad/07095ee9a288f3/output
main.cpp:8:13: error: call to deleted constructor of 'A'
   new A[1] {{1, 2}};
            ^
main.cpp:3:4: note: function has been explicitly marked deleted here
   A() = delete;
   ^
1 error generated.
