trunk/Archive2/ad/07095ee9a288f3/main.cpp
struct A
{
   A() = delete;
   A(int first, int second) {}
};
int main()
{
   new A[1] {{1, 2}};
}